--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 .Rproj.user
+
+# Output folders created by vignettes
+vignettes/Week1_Importing_Genetic_Data/data
