Updated vignettes for LandGenCourse 1.0.1

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ vignettes/Week1_Importing_Genetic_Data/*.html
 vignettes/Week2_Spatial_Data/*.html
 vignettes/Week3_Gene_Flow/*.html
 vignettes/Week3_GravityModels_Lab/*.html
+vignettes/Week1_Importing_Genetic_Data/Week1_vignette.html
 
 # Expanded zip folders
 vignettes/Week3_Gene_Flow/Lab3_RALU_DGS2016
