--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ vignettes/Week2_Spatial_Data/*.html
 vignettes/Week3_Gene_Flow/*.html
 vignettes/Week3_GravityModels_Lab/*.html
 vignettes/Week1_Importing_Genetic_Data/Week1_vignette.html
+/output
 
 # Expanded zip folders
 vignettes/Week3_Gene_Flow/Lab3_RALU_DGS2016
