gitnignore Week8 'OLD'

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ downloads
 /vignettes/Week3_Gene_Flow/*.html
 /vignettes/Week3_GravityModels_Lab/*.html
 /vignettes/Week1_Importing_Genetic_Data/Week1_vignette.html
+/vignettes/Week8_Simulation/OLD
 
 
 # Expanded zip folders
