--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,35 @@
 # History files
 .Rhistory
 .Rapp.history
-
 # Session Data files
 .RData
-
 # Example code in package build process
 *-Ex.R
-
 # Output files from R CMD build
 /*.tar.gz
-
 # Output files from R CMD check
 /*.Rcheck/
-
 # RStudio files
 .Rproj.user/
-
 # produced vignettes
 /vignettes/*.html
 /vignettes/*.pdf
-
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
-
 # knitr and R markdown default cache directories
 /*_cache/
 /cache/
-
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
 .Rproj.user
-
 # Output folders created by vignettes
 /vignettes/Week1_Importing_Genetic_Data/data
 /vignettes/Week2_Spatial_Data/data
 /vignettes/Week3_Gene_Flow/data
-
-
 downloads
-
 # Output folders created by vignettes
 *.html
-
 =======
 /vignettes/Week1_Importing_Genetic_Data/*.html
 /vignettes/Week2_Spatial_Data/*.html
@@ -51,12 +37,10 @@ downloads
 /vignettes/Week3_GravityModels_Lab/*.html
 /vignettes/Week1_Importing_Genetic_Data/Week1_vignette.html
 /vignettes/Week8_Simulation/OLD
-
-
 # Expanded zip folders
 /vignettes/Week3_Gene_Flow/Lab3_RALU_DGS2016
 /vignettes/Week4_Selection/Week4Lab_AdaptiveGenetics
 /vignettes/Week13_Network_Analysis/DGS2016_GravityModels_Lab
-
 # output folder
 /output
+.DS_Store
